# ChangeLog for sci-astronomy/setiathome
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-astronomy/setiathome/ChangeLog,v 1.7 2005/08/23 15:23:24 fmccor Exp $

  23 Aug 2005; Ferris McCormick <fmccor@gentoo.org>
  setiathome-3.03-r1.ebuild, setiathome-3.03-r2.ebuild,
  setiathome-4.18.ebuild:
  Add ~sparc keyword for setiathome-4.18 (Bug #103250) --- builds and
  installs successfully on sparc.  Remove sparc from versions
  setiathome-3.03-r{1,2}:  There are no downloads for these versions any
  more.

  22 Aug 2005; Marcus D. Hanwell <marcus@gentoo.org> setiathome-4.18.ebuild:
  A few small updates to fix a typo and change perms of /var/lib/boinc.

*setiathome-4.18 (21 Aug 2005)

  21 Aug 2005; Marcus D. Hanwell <marcus@gentoo.org> +files/app_info.xml,
  +setiathome-4.18.ebuild:
  Initial import of the new boinc based SETI@Home clients, closes bug 70303.
  Thanks to Tony Murray <tonymurray@fastmail.fm> and everyone else for
  contributing to this ebuild.

  26 Jun 2005; Rene Nussbaumer <killerfox@gentoo.org>
  setiathome-3.03-r2.ebuild:
  Removed from hppa. Tarball not available for hppa.

  17 Mar 2005; Michael Hanselmann <hansmi@gentoo.org>
  setiathome-3.08-r4.ebuild:
  Removed from ppc.

*setiathome-3.03-r2 (23 Dec 2004)

  23 Dec 2004; Olivier Fisette <ribosome@gentoo.org> +metadata.xml,
  +files/seti-conf.d-r1, +files/seti-init.d-r1, +files/setiathome-wrapper,
  +files/setiathome-wrapper-r1, +setiathome-3.03-r1.ebuild,
  +setiathome-3.03-r2.ebuild, +setiathome-3.08-r4.ebuild:
  Moved from app-sci/setiathome to sci-astronomy/setiathome.

*setiathome-3.08-r3 (18 Nov 2004)

  18 Nov 2004; Olivier Fisette <ribosome@gentoo.org>
  -setiathome-3.08-r3.ebuild:
  Removed insecure version. (See GLSA 200411-26.)

  09 Nov 2004; <SeJo@gentoo.org> setiathome-3.03-r2.ebuild:
  stable on ppc gsla: 69868

  08 Nov 2004; Ferris McCormick <fmccor@gentoo.org> setiathome-3.03-r2.ebuild: